# ST-Madison-Backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SERVERLESS_ISSUES.md  cloudbuild.yaml  service.yaml
.github/workflows/: ci.yml  parcel-tiles.yml
scripts/: extract_parcels_geojson.sql  extract_parcels_stats.sql  generate_parcel_pmtiles.sh  generate_parcel_stats.sh
src/: handlers.rs  main.rs  models.rs  repositories.rs  state.rs
src/handlers/: health.rs  land_efficiency.rs  parcel.rs  parcel_assessment.rs  property.rs  search.rs
src/models/: README.md  land_efficiency.rs  parcel_assessment.rs  parcel_response.rs  parcel_tax_breakdown.rs  property.rs  property_with_history.rs  tax_record.rs
src/repositories/: README.md  property.rs
src/repositories/land_efficiency/: error.rs  mod.rs
src/repositories/parcel_assessment/: error.rs  mod.rs
src/repositories/property/: duckdb.rs  error.rs
src/schemas/: README.md
