[package]
name = "st-madison-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
env_logger = "0.11.8"
iter_tools = "0.40.0"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = "0.6.6"
