[package]
name = "st-madison-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] } 
dotenvy = "0.15.7"
env_logger = "0.11.8"
iter_tools = "0.40.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = "0.6.6"
uuid = "1.18.1"
validator = "0.20.0"
